Fix paths to settings

--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -25,7 +25,7 @@
           </li>
           <li>
             <.link
-              href={~p"/users/settings"}
+              href={~p"/users/settings/personal"}
               class="text-[20px] leading-6 text-zinc-900 hover:text-zinc-700"
             >
               Settings
