--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white">
+  <body class="bg-background">
     <div class="shadow-navbar relative z-10">
       <ul class="h-[82px] container mx-auto flex items-center justify-end gap-10">
         <li class="mr-auto">
