--- a/lib/cen_web/components/layouts/app.html.heex
+++ b/lib/cen_web/components/layouts/app.html.heex
@@ -1,6 +1,6 @@
 <main class="container mx-auto">
   <.flash_group flash={@flash} />
-  <div class="py-[115px] grid grid-cols-4 gap-x-5 px-5 lg:grid-cols-12 lg:gap-x-10">
+  <div class="py-[115px] grid grid-cols-4 gap-x-5 lg:grid-cols-12 lg:gap-x-10">
     <%= @inner_content %>
   </div>
 </main>
