--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,11 +15,11 @@ main {
 }
 
 @layer components {
-  h1 {
-    @apply text-accent font-medium text-[30px] leading-[1.2];
+  .navbar-link {
+    @apply text-navbargray no-underline text-[20px] leading-[1.35] font-light hover:text-accent;
   }
 
-  a {
-    @apply text-accent font-normal underline;
+  .link {
+    @apply text-text hover:text-accent font-normal underline;
   }
 }
