--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -42,19 +42,13 @@
           </li>
         <% else %>
           <li>
-            <.link
-              href={~p"/users/register"}
-              class="text-[20px] leading-6 text-zinc-900 hover:text-zinc-700"
-            >
-              <%= dgettext("users", "Register") %>
+            <.link href={~p"/users/register"} class="navbar-link">
+              <%= dgettext("users", "Регистрация") %>
             </.link>
           </li>
           <li>
-            <.link
-              href={~p"/users/log_in"}
-              class="text-[20px] leading-6 text-zinc-900 hover:text-zinc-700"
-            >
-              <%= dgettext("users", "Log in") %>
+            <.link href={~p"/users/log_in"} class="navbar-link">
+              <%= dgettext("users", "Вход") %>
             </.link>
           </li>
         <% end %>
