--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -55,5 +55,56 @@
       </ul>
     </div>
     <%= @inner_content %>
+    <footer class="shadow-footer bg-[#F8F8F8] text-footergray">
+      <div class="py-[40px] container mx-auto lg:py-[60px] lg:grid-cols-12">
+        <div class=" grid grid-cols-1 gap-x-10 gap-y-10 ">
+          <section class="flex flex-col justify-between gap-y-10 lg:col-span-7 lg:flex-row">
+            <div>
+              <p class="text-[17px] leading-[1.1] font-light">Поступление 2023&ndash;2024</p>
+              <p class="mt-[14px] leading-[1.2] text-[12px]">г. Екатеринбург</p>
+            </div>
+            <div>
+              <ul class="space-y-[14px]">
+                <li><img class="w-[242px]" src="/images/culture-ekb-logo.png" /></li>
+                <li>
+                  <.link
+                    class="link-hover"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    href="https://культура.екатеринбург.рф/"
+                  >
+                    <.icon name="cen-globe" class="inline" /> Перейти на сайт
+                  </.link>
+                </li>
+                <li>
+                  <.icon name="cen-phone" class="inline" />
+                  <.link class="link-hover" href="tel:+73433042420" target="_blank">
+                    +7 (343) 304-24-20
+                  </.link>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <ul class="flex">
+                <li class="w-[40px]">
+                  <.link href="https://vk.com/ekb_ton" target="_blank" rel="noopener noreferrer">
+                    <.icon name="cen-vk" class="rounded-full  border border-accent" />
+                  </.link>
+                </li>
+              </ul>
+            </div>
+          </section>
+          <section class="space-y-[14px] lg:col-span-3 lg:col-start-10">
+            <p>ГРЦ &ldquo;ТОН: творческий образовательный навигатор&rdquo;</p>
+            <p>
+              <.icon name="cen-message" class="inline" />
+              <.link class="link-hover" href="mailto:ton.ekb@ya.ru" target="_blank">
+                ton.ekb@ya.ru
+              </.link>
+            </p>
+          </section>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
