--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -13,20 +13,20 @@
   </head>
   <body class="bg-background">
     <div class="shadow-navbar relative z-10">
-      <ul class="h-[82px] container mx-auto flex items-center justify-end gap-10">
+      <ul class="h-[5.125rem] container mx-auto flex items-center justify-end gap-10">
         <li class="mr-auto">
           <.link href={~p"/"}>
             <img src={~p"/images/logo.svg"} height="30" />
           </.link>
         </li>
         <%= if @current_user do %>
-          <li class="text-[20px] leading-6 text-zinc-900">
+          <li class="text-[1.25rem] leading-6 text-zinc-900">
             <%= @current_user.email %>
           </li>
           <li>
             <.link
               href={~p"/users/settings/personal"}
-              class="text-[20px] leading-6 text-zinc-900 hover:text-zinc-700"
+              class="text-[1.25rem] leading-6 text-zinc-900 hover:text-zinc-700"
             >
               Settings
             </.link>
@@ -35,7 +35,7 @@
             <.link
               href={~p"/users/log_out"}
               method="delete"
-              class="text-[20px] leading-6 text-zinc-900 hover:text-zinc-700"
+              class="text-[1.25rem] leading-6 text-zinc-900 hover:text-zinc-700"
             >
               Log out
             </.link>
@@ -56,16 +56,16 @@
     </div>
     <%= @inner_content %>
     <footer class="shadow-footer bg-[#F8F8F8] text-footergray">
-      <div class="py-[40px] container mx-auto lg:py-[60px] lg:grid-cols-12">
+      <div class="py-10 container mx-auto lg:py-[3.75rem] lg:grid-cols-12">
         <div class=" grid grid-cols-1 gap-x-10 gap-y-10 ">
           <section class="flex flex-col justify-between gap-y-10 lg:col-span-7 lg:flex-row">
             <div>
-              <p class="text-[17px] leading-[1.1] font-light">Поступление 2023&ndash;2024</p>
-              <p class="mt-[14px] leading-[1.2] text-[12px]">г. Екатеринбург</p>
+              <p class="text-[1.0625rem] leading-[1.1] font-light">Поступление 2023&ndash;2024</p>
+              <p class="mt-3.5 leading-[1.2] text-xs">г. Екатеринбург</p>
             </div>
             <div>
-              <ul class="space-y-[14px]">
-                <li><img class="w-[242px]" src="/images/culture-ekb-logo.png" /></li>
+              <ul class="space-y-3.5">
+                <li><img class="w-60" src="/images/culture-ekb-logo.png" /></li>
                 <li>
                   <.link
                     class="link-hover"
@@ -86,7 +86,7 @@
             </div>
             <div>
               <ul class="flex">
-                <li class="w-[40px]">
+                <li class="w-10">
                   <.link href="https://vk.com/ekb_ton" target="_blank" rel="noopener noreferrer">
                     <.icon name="cen-vk" class="rounded-full  border border-accent" />
                   </.link>
@@ -94,7 +94,7 @@
               </ul>
             </div>
           </section>
-          <section class="space-y-[14px] lg:col-span-3 lg:col-start-10">
+          <section class="space-y-3.5 lg:col-span-3 lg:col-start-10">
             <p>ГРЦ &ldquo;ТОН: творческий образовательный навигатор&rdquo;</p>
             <p>
               <.icon name="cen-message" class="inline" />
