--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -56,12 +56,12 @@
     </div>
     <%= @inner_content %>
     <footer class="shadow-footer bg-[#F8F8F8] text-footergray">
-      <div class="py-10 container mx-auto lg:py-[3.75rem] lg:grid-cols-12">
+      <div class="container mx-auto py-10 lg:py-[3.75rem] lg:grid-cols-12">
         <div class=" grid grid-cols-1 gap-x-10 gap-y-10 ">
           <section class="flex flex-col justify-between gap-y-10 lg:col-span-7 lg:flex-row">
             <div>
               <p class="text-[1.0625rem] leading-[1.1] font-light">Поступление 2023&ndash;2024</p>
-              <p class="mt-3.5 leading-[1.2] text-xs">г. Екатеринбург</p>
+              <p class="leading-[1.2] mt-3.5 text-xs">г. Екатеринбург</p>
             </div>
             <div>
               <ul class="space-y-3.5">
