--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -43,7 +43,7 @@
     <footer class="shadow-footer bg-[#F8F8F8] text-footergray">
       <div class="container mx-auto py-10 lg:py-[3.75rem] lg:grid-cols-12">
         <div class=" grid grid-cols-1 gap-x-10 gap-y-10 ">
-          <section class="flex flex-col justify-between gap-y-10 lg:col-span-7 lg:flex-row">
+          <div class="flex flex-col justify-between gap-y-10 lg:col-span-7 lg:flex-row">
             <div>
               <p class="text-[1.0625rem] leading-[1.1] font-light">Поступление 2023&ndash;2024</p>
               <p class="leading-[1.2] mt-3.5 text-xs">г. Екатеринбург</p>
@@ -78,8 +78,8 @@
                 </li>
               </ul>
             </div>
-          </section>
-          <section class="space-y-3.5 lg:col-span-3 lg:col-start-10">
+          </div>
+          <div class="space-y-3.5 lg:col-span-3 lg:col-start-10">
             <p>ГРЦ &ldquo;ТОН: творческий образовательный навигатор&rdquo;</p>
             <p>
               <.icon name="cen-message" class="inline" />
@@ -87,7 +87,7 @@
                 ton.ekb@ya.ru
               </.link>
             </p>
-          </section>
+          </div>
         </div>
       </div>
     </footer>
