--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -14,19 +14,24 @@
   <body class="bg-background flex h-screen flex-col justify-between">
     <div class="shadow-navbar relative z-10">
       <ul class="h-[5.125rem] container mx-auto flex items-center justify-start gap-10">
-        <li class="mr-auto">
+        <li>
           <.link href={~p"/"}>
             <img src={~p"/images/logo.svg"} height="30" alt={dgettext("alt", "Логотип ТОН")} />
           </.link>
         </li>
         <%= if @current_user do %>
           <li>
+            <.navbar_link href={~p"/organizations"}>
+              <%= dgettext("users", "Организации") %>
+            </.navbar_link>
+          </li>
+          <li class="ml-auto">
             <.link href={~p"/users/settings/personal"}>
               <div class="bg-accent inline-block h-11 w-11 rounded-full"></div>
             </.link>
           </li>
         <% else %>
-          <li>
+          <li class="ml-auto">
             <.navbar_link href={~p"/users/register"}>
               <%= dgettext("users", "Регистрация") %>
             </.navbar_link>
