Fix content position

--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -44,7 +44,7 @@
         <% end %>
       </ul>
     </div>
-    <div class="cen-background min-h-fit">
+    <div class="cen-background grow">
       <%= @inner_content %>
     </div>
     <footer class="shadow-footer bg-[#F8F8F8] text-footergray">
