Change line_height to 150

--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -66,9 +66,7 @@
                   <img
                     class="w-60"
                     src="/images/culture-ekb-logo.png"
-                    alt={
-                      dgettext("alt", "Логотип управления культуры администрации Екатеринбурга")
-                    }
+                    alt={dgettext("alt", "Логотип управления культуры администрации Екатеринбурга")}
                   />
                 </li>
                 <li>
