--- a/lib/cen_web/components/layouts/app.html.heex
+++ b/lib/cen_web/components/layouts/app.html.heex
@@ -4,3 +4,4 @@
     <%= @inner_content %>
   </div>
 </main>
+<.live_component module={CenWeb.ChatComponent} id="chat" current_user={assigns[:current_user]} />
