Add VK ID integration

--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -8,6 +8,8 @@
       <%= assigns[:page_title] || "Cen" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <script defer src="https://unpkg.com/@vkid/sdk@2.4.0/dist-sdk/umd/index.js">
+    </script>
     <script defer phx-track-static src={~p"/assets/app.js"}>
     </script>
   </head>
