--- a/lib/cen_web/components/layouts/app.html.heex
+++ b/lib/cen_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
 <main class="container mx-auto">
   <div id="notifications_wrapper" class="relative hidden">
     <.live_component
-      :if={assigns[:notifications]}
+      :if={assigns[:unread_notifications]}
       module={CenWeb.NotificationsComponent}
       id="notifications"
       unread_notifications={assigns[:unread_notifications]}
