--- a/lib/cen_web/components/layouts/app.html.heex
+++ b/lib/cen_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <main class="container mx-auto">
-  <div id="notifications_wrapper" class="relative hidden">
+  <div id="notifications_wrapper" class="relative hidden z-40">
     <.live_component
       :if={assigns[:unread_notifications]}
       module={CenWeb.NotificationsComponent}
