--- a/lib/cen_web/components/layouts/app.html.heex
+++ b/lib/cen_web/components/layouts/app.html.heex
@@ -12,7 +12,7 @@
   </div>
   <.flash_group flash={@flash} />
   <div class="py-[3.4375rem] lg:py-[7.1875rem] lg:grid lg:grid-cols-12 lg:gap-x-10">
-    <%= @inner_content %>
+    {@inner_content}
   </div>
 </main>
 
