--- a/lib/cen_web/live/privacy_live.html.heex
+++ b/lib/cen_web/live/privacy_live.html.heex
@@ -1,6 +1,6 @@
 <div class="lg:col-span-9 lg:col-start-2">
   <h1 class="mb-6 text-xl font-bold">Политика в отношении обработки персональных данных</h1>
-  <div class="space-y-6 *:space-y-6 [&>*_*]:space-y-4 [&_h2]:text-lg [&_h2]:font-medium">
+  <div class="[&>*_*]:space-y-4 [&_h2]:text-lg [&_h2]:font-medium space-y-6 *:space-y-6">
     <article>
       <h2>1. Общие положения</h2>
       <p>
@@ -225,7 +225,7 @@
     </article>
     <article>
       <h2>6. Цели обработки персональных данных</h2>
-      <table class="border-collapse [&_td]:border [&_td]:p-4">
+      <table class="[&_td]:border [&_td]:p-4 border-collapse">
         <tbody>
           <tr>
             <td>
