--- a/lib/cen_web/components/layouts/root.html.heex
+++ b/lib/cen_web/components/layouts/root.html.heex
@@ -14,7 +14,7 @@
     <script defer phx-track-static src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-background flex h-screen flex-col justify-between">
+  <body id="body" class="bg-background flex h-screen flex-col justify-between" phx-hook="ModalScrollFix">
     <div class="shadow-navbar relative z-10">
       <ul class="container mx-auto hidden h-20 items-center justify-start gap-10 lg:flex">
         <li>
